Fix issue version compatibility and broken install link
Fix issue version compatibility on various python packages and broken install link on poetry installation

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ BACKEND_CORS_ORIGINS=["http://localhost", "http://localhost:4200", "http://local
 PROJECT_NAME=gamereview
 SECRET_KEY=secretgamereview
 FIRST_SUPERUSER=admin@gamereview.com
-FIRST_SUPERUSER_PASSWORD=P@ssw0rd!1!
+FIRST_SUPERUSER_PASSWORD=Passw0rd!1!
 SMTP_TLS=True
 SMTP_PORT=587
 SMTP_HOST=
@@ -31,15 +31,15 @@ USERS_OPEN_REGISTRATION=False
 SENTRY_DSN=
 
 # Flower
-FLOWER_BASIC_AUTH=admin:P@ssw0rd!1!
+FLOWER_BASIC_AUTH=admin:Passw0rd!1!
 
 # Postgres
 POSTGRES_SERVER=db
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=P@ssw0rdPostgres1!
+POSTGRES_PASSWORD=Passw0rdPostgres1!
 POSTGRES_DB=app
 
 # PgAdmin
 PGADMIN_LISTEN_PORT=5050
 PGADMIN_DEFAULT_EMAIL=admin@gamereview.com
-PGADMIN_DEFAULT_PASSWORD=P@ssw0rd!1!
+PGADMIN_DEFAULT_PASSWORD=Passw0rd!1!
