--- a/reverseproxy/haproxy.cfg
+++ b/reverseproxy/haproxy.cfg
@@ -10,25 +10,24 @@ defaults
     timeout client  50000
     timeout server  50000
 
-backend flower
-    mode http
-    balance roundrobin
-    option forwardfor
-    server flower flower:5555
-    compression algo gzip
-
 backend fastapi
     mode http
     balance roundrobin
     option forwardfor
-    server web01 backend:5080
+    server api01 192.168.32.8:5081
     compression algo gzip
+
+backend nodejs
+    mode http
+    balance roundrobin
+    option forwardfor
+    server web01 192.168.32.3:3000
 
 frontend localhost
     bind *:80
     mode http
-    acl url_fapi url_reg ^.*\/api.*    
-    acl url_flower url_reg ^.*\/flower.* 
-    use_backend fastapi if url_fapi  
-    use_backend flower if url_flower    
-    default_backend fastapi
+    default_backend nodejs
+    #acl url_fapi url_reg /^.*\/api.*    
+    acl url_fapi url_beg /api
+    use_backend fastapi if url_fapi    
+    default_backend nodejs
