--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -32,6 +32,18 @@ http {
 		    proxy_set_header	X-Forwarded-Proto $scheme;
 	    }
 
+		# location /develop/ {
+        #     proxy_pass		    http://code-server:8443/;
+		#     proxy_http_version	1.1;
+		#     proxy_set_header	Upgrade $http_upgrade;
+		#     proxy_set_header	Connection upgrade;
+		#     proxy_set_header	Host $host;
+		#     proxy_cache_bypass	$http_upgrade;
+		#     proxy_set_header	X-Forwarded-For $proxy_add_x_forwarded_for;
+		#     proxy_set_header	X-Forwarded-Proto $scheme;
+		# 	proxy_set_header    Accept-Encoding gzip;
+	    # }
+
 		location /api/ {
             proxy_pass		    http://backend:5080/api/;
 		    proxy_http_version	1.1;
