--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
   proxy:
     #image: haproxy:latest
     image: nginx:stable
+    depends_on:
+      - backend
+      - frontend
     volumes:
       #- ./reverseproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
       - ./reverseproxy/nginx.conf:/etc/nginx/nginx.conf
@@ -91,8 +94,7 @@ services:
     image: '${DOCKER_IMAGE_FRONTEND?Variable not set}:${TAG-latest}'
     hostname: frontend
     volumes:
-      - ./frontend:/app
-    command: sh -c "npm install --force && exec npm start"
+      - ./frontend:/frontend
     build:
       context: ./frontend
       args:
