--- a/.env
+++ b/.env
@@ -30,6 +30,10 @@ USERS_OPEN_REGISTRATION=False
 
 SENTRY_DSN=
 
+# Celery
+CELERY_BROKER_URL=amqp://guest@queue//
+CELERY_RESULT_BACKEND=amqp://guest@queue//
+
 # Flower
 FLOWER_BASIC_AUTH=admin:Passw0rd!1!
 
