--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,9 +36,9 @@ services:
       - .env
 
   queue:
-    image: rabbitmq:3
+    # image: rabbitmq:3
     # Using the below image instead is required to enable the "Broker" tab in the flower UI:
-    # image: rabbitmq:3-management
+    image: rabbitmq:3-management
     #
     # You also have to change the flower command
   
@@ -46,13 +46,16 @@ services:
     image: mher/flower:0.9.7
     networks:
       - default
+    depends_on:
+      - queue
+      - celeryworker
     env_file:
       - .env
     command:
       - "--broker=amqp://guest@queue:5672//"
       # For the "Broker" tab to work in the flower UI, uncomment the following command argument,
       # and change the queue service's image as well
-      # - "--broker_api=http://guest:guest@queue:15672/api//"
+      - "--broker_api=http://guest:guest@queue:15672/api//"
   
   backend:
     image: '${DOCKER_IMAGE_BACKEND?Variable not set}:${TAG-latest}'
@@ -82,6 +85,8 @@ services:
     environment:
       - SERVER_NAME=${DOMAIN}
       - SERVER_HOST=https://${DOMAIN}
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
       # Allow explicit env var override for tests
       - SMTP_HOST=${SMTP_HOST?Variable not set}
     build:
