--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -45,6 +45,8 @@ torchvision = "0.14.1"
 torchaudio = "0.13.1"
 tqdm = "4.64.1"
 transformers = "4.26.1"
+pytorch-crf = "0.7.2"
+huggingface-hub = "0.13.3"
 python-jose = {extras = ["cryptography"], version = "^3.1.0"}
 
 [tool.poetry.dev-dependencies]
